# papillon-swig

./: .gitignore  CMakeLists.txt  Makefile  Papillon.i  PapillonCommon.i  README.md  java.i
cmake/Modules/: FindPapillon.cmake
csharp/: CMakeLists.txt
csharp/PapillonCore_CSharp/: CMakeLists.txt  PapillonCore_CSharp.csproj
csharp/PapillonCore_CSharpExample/: CMakeLists.txt  Example_UsingCSharp.csproj  PapillonCore_CSharpExample.csproj  Program.cs
csharp/PapillonCore_CSharpUnitTests/: CMakeLists.txt  PapillonCore_CSharpUnitTests.csproj  Program.cs
csharp/examples/: CMakeLists.txt  ExampleCoreImage.cs  ExampleFaceDetector.cs  ExampleFaceRecognition.cs  ExampleImageFromByteArray.cs  PapillonCore_CSharpExample.csproj.in
csharp/lib/: AssemblyInfo.cs  CMakeLists.txt  PapillonCore_CSharp.csproj.in
csharp/lib/src/: ESerialisationFormat.cs  EType.cs  EVerificationSecurityLevel.cs  PAnalytics.cs  PBool.cs  PByteArray.cs  PByteStream.cs  PColour3i.cs  PComparer.cs  PDatabaseStore.cs  PDatabaseStoreIterator.cs  PDate.cs  PDateTime.cs  PDescriber.cs  PDescriberInterface.cs  PDescription.cs  PDescriptor.cs  PDeserialisationException.cs  PDetection.cs  PDetectionList.cs  PDetector.cs  PDouble.cs  PEnrollment.cs  PEntity.cs  PEvent.cs  PEventBuilder.cs  PExampleSet.cs  PFaceMetaData.cs  PFeatureMap.cs  PFeaturePoint.cs  PFeatureRectangle.cs  PFileIO.cs  PFloat.cs  PFrame.cs  PFrameToFrameTracker.cs  PGPSLocation.cs  PGuid.cs  PIAsynchronousWatchlistUpdater.cs  PIdentifyResult.cs  PIdentifyResults.cs  (+75 more)
csharp/src/: .gitignore  CMakeLists.txt
java/: CMakeLists.txt  ExampleCoreImage.java  ExampleFaceDetector.java  ExampleFaceRecognition.java  PapillonCoreJava.i
java/src/: ESerialisationFormat.java  EStreamStatus.java  PByteArray.java  PByteArrayInputStream.java  PByteArrayOutputStream.java  PClassId.java  PColour3f.java  PColour3i.java  PComparer.java  PDate.java  PDateTime.java  PDescriber.java  PDescription.java  PDescriptor.java  PDetection.java  PDetectionList.java  PDetector.java  PDetectorOptions.java  PExampleSet.java  PFeatureMap.java  PFeaturePoint.java  PFeatureRectangle.java  PFrame.java  PFrameToFrameTracker.java  PGPSLocation.java  PGuid.java  PIdentifyResult.java  PIdentifyResults.java  PImage.java  PImageFilter.java  PImageFilterOptions.java  PInputStream.java  PInputStreamInterface.java  PInputVideoStream.java  PLog.java  PLogStream.java  PMatchScore.java  PMath.java  PObjectType.java  POutputStream.java  (+51 more)
python/: CMakeLists.txt  Papillon.i  PapillonCoreExample.py  PapillonCoreVideo.py  PapillonFaceDetect.py  PapillonMotionDetect.py  PapillonPersonDetect.py
ruby/: CMakeLists.txt  Papillon.i  Rakefile  example.rb  hello_world.rb  papillon.gemspec
ruby/examples/: ExamplePapillonFaceDetect.rb
ruby/ext/papillon/: extconf.rb
ruby/lib/: PapillonFaceDetect.rb  PapillonPStringPatch.rb  papillon.rb
ruby/lib/papillon/: facedetect.rb
