INCLUDE(${SWIG_USE_FILE})

SET(CSHARP_MODULE_NAME PapillonCoreCSharp)

SET_SOURCE_FILES_PROPERTIES(../Papillon.i PROPERTIES CPLUSPLUS ON)

if(UNIX)
    SET(CMAKE_SWIG_FLAGS -DSWIGWORDSIZE64)
endif()

SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR}/src)

SWIG_ADD_MODULE(${CSHARP_MODULE_NAME} csharp ../Papillon.i)

SWIG_LINK_LIBRARIES(${CSHARP_MODULE_NAME} ${PAPILLON_LIBRARIES})

if(WIN32)
    INSTALL(TARGETS ${CSHARP_MODULE_NAME} DESTINATION bin)
else()
    INSTALL(TARGETS ${CSHARP_MODULE_NAME} DESTINATION lib)
endif()
    
INSTALL(DIRECTORY ${CMAKE_SWIG_OUTDIR} DESTINATION lib/csharp FILES_MATCHING PATTERN "*.cs" )

INSTALL(FILES ExampleCoreImage.cs 
            ExampleFaceDetector.cs 
            ExampleFaceRecognition.cs 
            ExampleImageFromByteArray.cs 
            DESTINATION examples/csharp)


