INCLUDE(${SWIG_USE_FILE})

SET(CSHARP_MODULE_NAME PapillonCoreCSharp)

SET_SOURCE_FILES_PROPERTIES(../Papillon.i PROPERTIES CPLUSPLUS ON)

if(UNIX)
    SET(CMAKE_SWIG_FLAGS -DSWIGWORDSIZE64)
endif()

SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR}/src)

SWIG_ADD_LIBRARY(${CSHARP_MODULE_NAME} LANGUAGE csharp SOURCES ../Papillon.i)

SWIG_LINK_LIBRARIES(${CSHARP_MODULE_NAME} ${PAPILLON_LIBRARIES})

set_target_properties(${CSHARP_MODULE_NAME} PROPERTIES
                      LIBRARY_OUTPUT_DIRECTORY_DEBUG $ENV{PAPILLON_INSTALL_DIR}/bin
                      LIBRARY_OUTPUT_DIRECTORY_RELEASE $ENV{PAPILLON_INSTALL_DIR}/bin
)


if(WIN32)
    INSTALL(TARGETS ${CSHARP_MODULE_NAME} DESTINATION bin)
else()
    INSTALL(TARGETS ${CSHARP_MODULE_NAME} DESTINATION lib)
endif()


