INCLUDE(${SWIG_USE_FILE})

find_package(Ruby REQUIRED)

papillon_print_variables_with_prefix(RUBY)

INCLUDE_DIRECTORIES(${RUBY_INCLUDE_PATH})

SET(CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

SET(RUBY_MODULE_NAME papillon)

SET_SOURCE_FILES_PROPERTIES(../Papillon.i PROPERTIES CPLUSPLUS ON)

if(POLICY CMP0026)
  cmake_policy(SET CMP0026 OLD)
endif()

SWIG_ADD_MODULE(${RUBY_MODULE_NAME} ruby ../Papillon.i)

SWIG_LINK_LIBRARIES(${RUBY_MODULE_NAME} ${PAPILLON_LIBRARIES} ${RUBY_LIBRARIES})

if(WIN32)
    INSTALL(TARGETS ${RUBY_MODULE_NAME} DESTINATION bin)
else()
    INSTALL(TARGETS ${RUBY_MODULE_NAME} DESTINATION lib)
endif()



